--- a/package.json
+++ b/package.json
@@ -32,8 +32,10 @@
     "react-redux": "^7.2.6",
     "react-router-dom": "^5.3.0",
     "react-scripts": "4.0.3",
+    "react-table": "^6.11.5",
     "react-toastify": "^8.2.0",
     "react-toggle-button": "^2.2.0",
+    "reactstrap": "^8.4.1",
     "redux": "^4.1.1",
     "redux-devtools-extension": "^2.13.9",
     "redux-thunk": "^2.4.0",
